Some fixes to run it on my device